[package]
name = "triangular-arbitrage-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.27"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
